feat: enhance n8n integration, fix CV upload logic and add public endpoints